# keylight-cli

./: Cargo.toml  README.md  com.keylight.daemon.plist  onair.sh
src/: cli.rs  discovery.rs  main.rs
