[package]
name = "keylight"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
clap = { version = "3.1.14", features = ["env"] }
clap_logger = "*"
env_logger = "*"
log = "*"
reqwest = { version = "*", features = ["json", "blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
mdns-sd = "0.11"
tokio = { version = "1.28.0", features = ["macros"] }
